WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194878
Rotation animations sometimes use the wrong origin (affects apple.com)
https://bugs.webkit.org/show_bug.cgi?id=194878
Summary
Rotation animations sometimes use the wrong origin (affects apple.com)
Dean Jackson
Reported
2019-02-20 16:02:33 PST
Rotation animations sometimes use the wrong origin (affects apple.com)
Attachments
Patch
(34.18 KB, patch)
2019-02-20 16:10 PST
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-02-20 16:05:03 PST
<
rdar://problem/43908047
>
Dean Jackson
Comment 2
2019-02-20 16:10:36 PST
Created
attachment 362560
[details]
Patch
Dean Jackson
Comment 3
2019-02-20 16:49:53 PST
Committed
r241852
: <
https://trac.webkit.org/changeset/241852
>
Antoine Quint
Comment 4
2019-02-21 02:32:39 PST
Why is there no version check for iOS? Has this behaviour always existed on iOS?
Dean Jackson
Comment 5
2019-02-21 09:02:43 PST
(In reply to Antoine Quint from
comment #4
)
> Why is there no version check for iOS? Has this behaviour always existed on > iOS?
You're right that this hasn't changed for iOS yet, but ToT is already targeting the future.
Antoine Quint
Comment 6
2019-02-21 09:36:01 PST
(In reply to Dean Jackson from
comment #5
)
> (In reply to Antoine Quint from
comment #4
) > > Why is there no version check for iOS? Has this behaviour always existed on > > iOS? > > You're right that this hasn't changed for iOS yet, but ToT is already > targeting the future.
Should we address that? Bots and anyone building for iOS with OpenSource will have the wrong behaviour.
Simon Fraser (smfr)
Comment 7
2019-02-21 11:04:21 PST
(In reply to Antoine Quint from
comment #6
)
> (In reply to Dean Jackson from
comment #5
) > > (In reply to Antoine Quint from
comment #4
) > > > Why is there no version check for iOS? Has this behaviour always existed on > > > iOS? > > > > You're right that this hasn't changed for iOS yet, but ToT is already > > targeting the future. > > Should we address that? Bots and anyone building for iOS with OpenSource > will have the wrong behaviour.
Yes, we need to maintain correct behavior when running on iOS 12.
Shawn Roberts
Comment 8
2019-02-22 17:27:56 PST
Test is showing missing results in dashboard. Flakiness Dashboard :
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=legacy-animation-engine%2Fanimations%2Fadditive-transform-animations.html
Started with
r241852
. Appears that expected file might be missing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug